--- a/Personal-Website/src/index.html
+++ b/Personal-Website/src/index.html
@@ -5,10 +5,17 @@
   <title>PersonalWebsite</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Optional: Bootstrap JS (am Ende des <body>) -->
+  <style>
+    :root
+    {
+      --main-color: #800ac4;
+    }
+  </style>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
