--- a/Personal-Website/src/index.html
+++ b/Personal-Website/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PersonalWebsite</title>
+  <title>JBrunnerhtl</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,7 +17,7 @@
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/181450496?s=400&v=4">
 </head>
 <body>
   <app-root></app-root>
