made a function to save the selected color

--- a/Personal-Website/src/index.html
+++ b/Personal-Website/src/index.html
@@ -21,5 +21,13 @@
 </head>
 <body>
   <app-root></app-root>
+  <script>
+    let color = "#800ac4";
+    if(localStorage.getItem('theme'))
+    {
+      color = localStorage.getItem('theme');
+    }
+    document.documentElement.style.setProperty('--main-color', color);
+  </script>
 </body>
 </html>
